--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 
       <div class="contact">
         For privacy-related inquiries, contact us at
-        <a href="mailto:babytracker@gmail.com">babytracker@gmail.com</a>.
+        <a href="mailto:tinoktracker@gmail.com">tinoktracker@gmail.com</a>.
       </div>
 
       <h2>1. Data Controller</h2>
